fix: always show ADD TO CART button on small screens

--- a/client/src/components/collection-item/collection-item.styles.scss
+++ b/client/src/components/collection-item/collection-item.styles.scss
@@ -1,6 +1,10 @@
 .collection-item {
   .custom-button {
     display: none;
+
+    @media screen and (max-width: 768px) {
+      display: flex;
+    }
   }
 
   .container {
